# ferox

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  VISUAL_STABILITY_TESTS.md  ferox_gui  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  model_behavior_work.yml  performance_work.yml  protocol_transport_work.yml  science_validation_work.yml
.github/workflows/: ci.yml  update-preview-gif.yml
artifacts/perf/20260223-001148/: metrics.csv  raw_metrics.json  report.md  run_extras.json  run_hints.json  summary.json
artifacts/perf/20260305-133809/: metrics.csv  raw_metrics.json  report.md  run_extras.json  run_hints.json  summary.json
artifacts/perf/20260319-132255/: metrics.csv  raw_metrics.json  report.md  run_extras.json  summary.json
artifacts/perf/20260319-172155/: metrics.csv  raw_metrics.json  report.md  run_extras.json  run_hints.json  summary.json
build-perf/debug/: CPackConfig.cmake  CPackSourceConfig.cmake
build-perf/debug/tests/: test_colors_exhaustive  test_combat_system  test_growth_shapes  test_gui  test_names_exhaustive  test_performance_eval  test_protocol_edge  test_runner  test_simd_eval  test_simulation_logic  test_threadpool_stress  test_visual_stability
build-perf/release/: CPackConfig.cmake  CPackSourceConfig.cmake
build-perf/release/tests/: test_colors_exhaustive  test_combat_system  test_growth_shapes  test_gui  test_names_exhaustive  test_performance_eval  test_protocol_edge  test_runner  test_simd_eval  test_simulation_logic  test_threadpool_stress  test_visual_stability
cmake/: FindNCurses.cmake
config/: perf_baseline_default_profile.json  science_benchmarks.json
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_LOOP.md  CODEBASE_REVIEW_LOG.md  COLONY_INTELLIGENCE.md  CONTRIBUTING.md  DEVELOPMENT_CYCLE.md  FEROX_CLUB.md  GENETICS.md  HARDWARE_ACCELERATION.md  LITERATURE_REVIEW.md  PERFORMANCE.md  PERFORMANCE_BACKLOG.md  PERFORMANCE_RESEARCH.md  PERF_RUNBOOK.md  PERF_TARGETS.md  PROGRESS.md  PROJECT_HYGIENE.md  PROTOCOL.md  README.md  REFACTORING_PLAN.md  RUNNER_OPS.md  SCALING_AND_BEHAVIOR_PLAN.md  SCIENCE_BENCHMARKS.md  SCIENCE_BIBLIOGRAPHY.md  SELF_HOSTED_RUNNERS.md  SIMULATION.md  STATISTICAL_REGRESSION.md  TESTING.md
docs/agent-handoffs/: latest.md
docs/lab-notes/: 20260324-165209-snapshot-colony-id-lookup.md  20260324-171525-broadcast-inline-grid-allocation.md  20260324-171905-one-pass-world-state-serialization.md  20260324-172911-raw-grid-decode-research.md  20260324-173931-command-spawn-colony-honesty.md  20260324-175218-spawn-command-feedback.md  20260324-181517-selection-command-feedback.md  20260324-184054-reset-command-feedback.md  20260324-233047-hgt-unit-test-coverage.md  20260324-233546-client-speed-factor-alignment.md  20260324-235931-client-logic-surface-ctest.md
internal/ghautomation/: automation.go
prompts/: autonomous_research_loop.md
scripts/: build.sh  clean.sh  dev.sh  generate_preview_gif.py  opencode_research_loop.sh  perf_baseline_report.py  perf_scenarios.py  run.sh  science_benchmarks.py  setup-runner.sh  test.sh
src/client/: CMakeLists.txt  client.c  client.h  input.c  input.h  main.c  renderer.c  renderer.h
src/gui/: CMakeLists.txt  gui_client.c  gui_client.h  gui_input.c  gui_input.h  gui_main.c  gui_renderer.c  gui_renderer.h
src/server/: CMakeLists.txt  atomic_sim.c  atomic_sim.h  combat.c  combat.h  environment 2.c  environment.h  frontier_metrics.c  frontier_metrics.h  genetics.c  genetics.h  growth.c  growth.h  hardware_profile.c  hardware_profile.h  main.c  parallel.c  parallel.h  phase_wait.c  phase_wait.h  server.c  server.h  simulation.c  simulation.h  simulation_common.c  simulation_common.h  threadpool.c  threadpool.h  world.c  world.h
src/shared/: CMakeLists.txt  atomic_types.h  cacheline.h  colors.c  colors.h  names.c  names.h  network.c  network.h  protocol.c  protocol.h  simulation_common 2.c  types.h  utils.c  utils.h
tests/: CMakeLists.txt  test_client_input_surface.c  test_client_logic_surface.c  test_colors_exhaustive.c  test_combat_system.c  test_frontier_metrics.c  test_genetics_advanced.c  test_growth_shapes.c  test_gui.c  test_hardware_profile.c  test_monod_kinetics.c  test_names_exhaustive.c  test_parallel_edge.c  test_perf_components.c  test_perf_unit_protocol.c  test_performance_eval.c  test_performance_profile.c  test_phase1.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_protocol_edge.c  test_rd_controls.c  test_renderer_logic_surface.c  test_runner.c  test_server_branch_coverage.c  test_simd_eval.c  test_simulation_common.c  test_simulation_logic.c  test_simulation_stat_regression.c  test_simulation_stress.c  test_threadpool_stress.c  test_visual_stability.c  test_world_advanced.c  test_world_branch_coverage.c
tools/: CMakeLists.txt  preview_capture.c
